--- a/Index.html
+++ b/Index.html
@@ -19,18 +19,13 @@
 			<div class="button">
 			<a href="story-1.html"><button class="clickable_button style="">Play!</button></a>
 		</div>
-				<div class="button">
-			<a href="story-1.html"><button class="clickable_button">Play!</button></a>
-		</div>
-				<div class="button">
-			<a href="story-1.html"><button class="clickable_button">Play!</button></a>
-		</div>
+			
 		<div embed src=&quote; ./resources/ media/ audio/>
 			
 		</div>
 </div>
 
-		
+		<embed src="./resources/media/audio/Omoide.mp3" loop="true" hidden="true" autostart="true">
 	</div>
 
 </body>
