--- a/game1.html
+++ b/game1.html
@@ -11,7 +11,7 @@
 	<div class="game_wrapper" style="background-image: url(./resources/media/images/indoor.jpg); background-size: cover; background-position: center;">
 
 		<div>
-			<h1 class="gametitlebar" style="color: black; font-size: 60px; text-align:center; background-color:#FACC2E;"> Let's Make Ramen!  Make the customers order!  Choose Broth Flavors!</h2>  </h1>
+			<h1 class="gametitlebar" style="color: black; font-size: 30px; text-align:center; background-color:#FACC2E;"> Let's Make Ramen!  Make the customers order!  Choose Broth Flavors!</h2>  </h1>
 
 		</div>
 
@@ -20,14 +20,14 @@
 <div>
 			<div class="sideImageContainer">
 
-			<a href="one.html">
-				<img src="./resources/media/images/shoyou.jpg">
+			<a href="wrong_choice1.html">
+				<img src="./resources/media/images/shoyou.jpg"width="120%">
+			<a/>
+			 <a href="game2.html">
+				<img src="./resources/media/images/tonkatsu.jpg"width="120%">
 			</a>
-			<a href="one.html">
-				<img src="./resources/media/images/tonkatsu.jpg">
-			</a>
-			<a href="one.html">
-				<img src="./resources/media/images/miso.jpg">
+			<a href="wrong_choice1.html">
+				<img src="./resources/media/images/miso.jpg"width="120%">
 			</a>
 			
 		</div>
@@ -36,10 +36,10 @@
 			
 		</div>
 		
-			
+			<embed src="./resources/media/audio/Jeopardy.mp3" loop="true" hidden="true" autostart="true">
 </div>
 
-		
+		<embed src="./resources/media/audio/Jeopardy.mp3" loop="true" hidden="true" autostart="true">
 	</div>
 
 </body>
