--- a/story-1.html
+++ b/story-1.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html>
 <head>
+<html>
 	<title>The Diner Next Door</title>
 	<link rel="stylesheet" type="text/css" href="./resources/css/style.css">
 </head>
@@ -23,8 +23,8 @@
 				The storming crowd, rushing through the street, 
 
 				People come and pass by,  
-				No one talk to eachother, just 
-				some times I wonder if there's still any heart warm in this world.</h1>
+				No one talk to eachother,
+				is there still any heart warm in this world? </h1>
 
 				
 			</h2>
