--- a/story-3.html
+++ b/story-3.html
@@ -17,13 +17,7 @@
 
 
 
-			">A busy city, 
-				Far from home On a cold winter night,
-				The storming crowd, rushing through the street, 
-
-				People come and pass by,  
-				No one talk to eachother, just 
-				some times I wonder if there's still any heart warm in this world.</p>
+			">There's a small diner hidden inside .</p>
 
 				
 			</h2>
@@ -33,5 +27,5 @@
 		<div class="next_button">
 			<a href="story-4.html"><button class="clickable_button">next!</button></a>
 		</div>
-
+		<embed src="./resources/media/audio/tasty_song.mp3" loop="true" hidden="true" autostart="true"></div>
 </body>
