--- a/story-4.html
+++ b/story-4.html
@@ -6,7 +6,7 @@
 </head>
 
 <body> 
-	<div class="game_wrapper" style="background-image: url(./resources/media/images/storefront.jpg); background-size: cover; background-position: center;">
+	<div class="game_wrapper" style="background-image: url(./resources/media/images/customergathered.jpg); background-size: cover; background-position: center;">
 
 		<div class="title_box">
 			<p style="font-size: 1.3vw;
@@ -17,13 +17,7 @@
 
 
 
-			">  A busy city, 
-				Far from home On a cold winter night,
-				The storming crowd, rushing through the street, 
-
-				People come and pass by,  
-				No one talk to eachother, just 
-				some times I wonder if there's still any heart warm in this world.</p>
+			"> The Diner opens from 6pm through 4AM the next morning. People came to this tiny little diner to talke and have their favorite comfort food. </p>
 
 				
 			</h2>
@@ -31,7 +25,7 @@
 
 			
 		<div class="next_button">
-			<a href="story-5.html"><button class="clickable_button">next!</button></a>
+			<a href="story-6.html"><button class="clickable_button">next!</button></a>
 		</div>
-
+<embed src="./resources/media/audio/closing_time.mp3" loop="true" hidden="true" autostart="true">
 </body>
