--- a/story-6.html
+++ b/story-6.html
@@ -13,21 +13,25 @@
     margin-inline-start: 40px;
     margin-inline-end: 60px;
 }
-			">A busy city, 
-				Far from home On a cold winter night,
-				The storming crowd, rushing through the street, 
+			">In this game you will be playing "Master"(the owner and the chef) Remeber the order and serve the customer.</p>
+	<p style="font-size: 1.3vw;
+    margin-inline-start: 40px;
+    margin-inline-end: 60px;
+}
+			">......................................................</p>
 
-				People come and pass by,  
-				No one talk to eachother, just 
-				some times I wonder if there's still any heart warm in this world.</p>
-
+<p style="font-size: 1.3vw;
+    margin-inline-start: 40px;
+    margin-inline-end: 60px;
+}
+			"> Master: What would you like to have today?
 				
 			</h2>
 		</div>
 
 			
 		<div class="next_button">
-			<a href="story-4.html"><button class="clickable_button">next!</button></a>
+			<a href="story-7.html"><button class="clickable_button">next!</button></a>
 		</div>
-
+<embed src="./resources/media/audio/ramen.mp3" loop="true" hidden="true" autostart="true">
 </body>
