--- a/story-7.html
+++ b/story-7.html
@@ -13,13 +13,13 @@
     margin-inline-start: 40px;
     margin-inline-end: 60px;
 }
-			">A busy city, 
-				Far from home On a cold winter night,
-				The storming crowd, rushing through the street, 
+			">Adachi Sang(Sir Adachi): Master! "1 Tonkatsu Ramen with Nori(Sea Weed) Please.   </p>
 
-				People come and pass by,  
-				No one talk to eachother, just 
-				some times I wonder if there's still any heart warm in this world.</p>
+			<p style="font-size: 1.3vw;
+    margin-inline-start: 40px;
+    margin-inline-end: 60px;
+}
+			"> Master: Right Away! 
 
 				
 			</h2>
@@ -27,7 +27,7 @@
 
 			
 		<div class="next_button">
-			<a href="story-4.html"><button class="clickable_button">next!</button></a>
+			<a href="game1.html"><button class="clickable_button">next!</button></a>
 		</div>
-
+<embed src="./resources/media/audio/Ramen.mp3" loop="true" hidden="true" autostart="true">
 </body>
