--- a/story-transition1.html
+++ b/story-transition1.html
@@ -6,28 +6,30 @@
 </head>
 
 <body> 
-	<div class="game_wrapper" style="background-image: url(./resources/media/images/the_master.jpg); background-size: cover; background-position: center;">
+	<div class="game_wrapper" style="background-image: url(./resources/media/images/customerreact.jpg); background-size: cover; background-position: center;">
 
 		<div class="title_box">
 			<p style="font-size: 1.3vw;
     margin-inline-start: 40px;
     margin-inline-end: 60px;
 }
-			">A busy city, 
-				Far from home On a cold winter night,
-				The storming crowd, rushing through the street, 
-
-				People come and pass by,  
-				No one talk to eachother, just 
-				some times I wonder if there's still any heart warm in this world.</p>
+			">Adachi Sang(Sir Adachi): "Sniff-Sniff" Smells Good! This brings back memories when our family was poor and didn't have much to eat. This Tonkatsu Nori Ramen was luxurious for me and my siblings.  .</p>
+			<p style="font-size: 1.3vw;
+    margin-inline-start: 40px;
+    margin-inline-end: 60px;
+}
+			">Furukawa Sang(Sir Furukawa): "Wow~ That looks good......</p>
 
 				
 			</h2>
 		</div>
+<embed src="./resources/media/audio/tasty_song.mp3" loop="true" hidden="true" autostart="true">
 
 			
 		<div class="next_button">
-			<a href="story-4.html"><button class="clickable_button">next!</button></a>
+			<a href="story-transition2.html"><button class="clickable_button">next!</button></a>
 		</div>
+		
+
 
 </body>
