--- a/wrong_choice2.html
+++ b/wrong_choice2.html
@@ -6,20 +6,14 @@
 </head>
 
 <body> 
-	<div class="game_wrapper" style="background-image: url(./resources/media/images/the_master.jpg); background-size: cover; background-position: center;">
+	<div class="game_wrapper" style="background-image: url(./resources/media/images/question1.jpg); background-size: cover; background-position: center;">
 
 		<div class="title_box">
 			<p style="font-size: 1.3vw;
     margin-inline-start: 40px;
     margin-inline-end: 60px;
 }
-			">A busy city, 
-				Far from home On a cold winter night,
-				The storming crowd, rushing through the street, 
-
-				People come and pass by,  
-				No one talk to eachother, just 
-				some times I wonder if there's still any heart warm in this world.</p>
+			">Master: I believe Adachi Sang(sir Adachi) ordered a Tonkatsu Ramen with Nori Seaweed. Let's Try again. </p>
 
 				
 			</h2>
@@ -27,7 +21,9 @@
 
 			
 		<div class="next_button">
-			<a href="story-4.html"><button class="clickable_button">next!</button></a>
+			<a href="game2.html"><button class="clickable_button">next!</button></a>
 		</div>
-
+			<embed src="./resources/media/audio/wrong.mp3" loop="true" hidden="true" autostart="true">
+				
+			</div>
 </body>
