--- a/game2.html
+++ b/game2.html
@@ -11,7 +11,7 @@
 	<div class="game_wrapper" style="background-image: url(./resources/media/images/indoor.jpg); background-size: cover; background-position: center;">
 
 		<div>
-			<h1 class="gametitlebar" style="color: black; font-size: 30px; text-align:center; background-color:#FACC2E;"> Let's Make Ramen!  Make the customers order!  Choose Broth Flavors!</h2>  </h1>
+			<h1 class="gametitlebar" style="color: black; font-size: 30px; text-align:center; background-color:#FACC2E;"> Let's Make Ramen!  Make the customers order!  Choose Toppings!</h2>  </h1>
 
 		</div>
 
@@ -20,13 +20,13 @@
 <div>
 			<div class="game2sideImageContainer" >
 
-			<a href="one.html">
+			<a href="reward.html">
 				<img src="./resources/media/images/Nori.jpg" width="110% " style="margin-left: 76%">
 			</a>
-			<a href="one.html">
+			<a href="wrong_choice2.html">
 				<img src="./resources/media/images/bambooshoots.jpg" width="110% " style="margin-left: 76%">
 			</a>
-			<a href="one.html">
+			<a href="wrong_choice2.html">
 				<img src="./resources/media/images/corn.jpg" width="110% " style="margin-left: 76%">
 			</a>
 			
@@ -36,7 +36,7 @@
 			
 		</div>
 		
-			
+			<embed src="./resources/media/audio/Jeopardy.mp3" loop="true" hidden="true" autostart="true">
 </div>
 
 		
