--- a/story-transition2.html
+++ b/story-transition2.html
@@ -6,28 +6,27 @@
 </head>
 
 <body> 
-	<div class="game_wrapper" style="background-image: url(./resources/media/images/the_master.jpg); background-size: cover; background-position: center;">
+	<div class="game_wrapper" style="background-image: url(./resources/media/images/hi1.jpg); background-size: cover; background-position: center;">
 
 		<div class="title_box">
 			<p style="font-size: 1.3vw;
     margin-inline-start: 40px;
     margin-inline-end: 60px;
 }
-			">A busy city, 
-				Far from home On a cold winter night,
-				The storming crowd, rushing through the street, 
-
-				People come and pass by,  
-				No one talk to eachother, just 
-				some times I wonder if there's still any heart warm in this world.</p>
+			">Furukawa Sang(Sir Furukawa):Master! Can I also have ramen too please. I want Miso ramen with Sweet Corn. If possible can I also have a piece of cheese to go with the ramen please.</p>
+		<p style="font-size: 1.3vw;
+    margin-inline-start: 40px;
+    margin-inline-end: 60px;
+}
+			">Master: Coming Right Up!.</p>
 
 				
 			</h2>
 		</div>
-
+<embed src="./resources/media/audio/tasty_song.mp3" loop="true" hidden="true" autostart="true">
 			
 		<div class="next_button">
-			<a href="story-4.html"><button class="clickable_button">next!</button></a>
+			<a href="game2.1.html"><button class="clickable_button">next!</button></a>
 		</div>
 
 </body>
